# QR-Code-generator

./: .gitignore  .pnp.js  BitBuffer.java  CMakeLists.txt  LICENSE  QRCODE INSTA DANILO  QrCode.java  QrSegment.java  README.md  Readme.markdown  ios.toolchain.cmake  main.c  package.json  qrcodegen-demo.py  qrcodegen.js  qrcodegen.py
.github/workflows/: linux.yml  main.yml
android/: .gitignore  Readme.markdown  build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/qrcodegen/: build.gradle
android/qrcodegen/src/main/: AndroidManifest.xml
android/ru/ra66it/qrcodegen/: BitBuffer.java  DataTooLongException.java  QrCode.java  QrSegment.java  QrSegmentAdvanced.java
c/: .gitignore  Makefile  Readme.markdown  encodeBinary_fuzzer.c  fuzzing.sh  qrcodegen-demo.c  qrcodegen-test.c  qrcodegen-worker.c  qrcodegen.c  qrcodegen.h
cmake/: qrcodegen-config.cmake.in  qrcodegen.pc.in  qrcodegencpp-config.cmake.in  qrcodegencpp.pc.in
cpp/: BitBuffer.cpp  BitBuffer.hpp  CMakeLists.txt  Makefile  QrCode.cpp  QrCode.hpp  QrCodeConfig.cmake.in  QrCodeConfigVersion.cmake.in  QrCodeGeneratorDemo.cpp  QrCodeGeneratorWorker.cpp  QrCoder.cpp  QrCoder.hpp  QrSegment.cpp  QrSegment.hpp  README.md  Readme.markdown  qrcodegen.cpp  qrcodegen.hpp
cpp/QrCode/: QrCode.hpp  QrSegment.hpp
cpp/examples/: QrCodeGeneratorWorker.cpp
cpp/src/: QrSegment.cpp
csharp/: QrCodeGenerator.sln
csharp/QrCodeGenerator/: BitBuffer.cs  ErrorCorrection.cs  Mode.cs  QrCode.cs  QrCodeGenerator.csproj  QrSegment.cs
csharp/QrCodeGenerator/BitSet/: BitSet.cs  ObjectCopier.cs
csharp/QrCodeGenerator/CustomExceptions/: DataTooLongException.cs
dart/: qrcodegen.dart
dotnet/: QrCodeGenerator.sln
dotnet/QrCodeGenerator/: BitArrayExtensions.cs  DataTooLongException.cs  Objects.cs  QrCode.cs  QrCodeGenerator.csproj  QrSegment.cs  QrSegmentAdvanced.cs  ReedSolomonGenerator.cs
dotnet/QrCodeGenerator/docfx/: docfx.json  index.md
dotnet/QrCodeGenerator/docfx/api/: index.md
dotnet/QrCodeGeneratorDemo/: Program.cs  QrCodeGeneratorDemo.csproj
dotnet/QrCodeGeneratorTest/: BitArrayExtensionsTest.cs  KanjiTest.cs  OptimalSegmentTest.cs  PngTest.cs  QrCodeGeneratorTest.csproj  QrCodeTest.cs  QrSegmentEncodingTest.cs  QrSegmentRegexTest.cs  SvgTest.cs  TestHelper.cs
golang/: go.mod  qrcodegen.go
golang/examples/: demo.go
golang/internal/bitx/: bitx.go
golang/internal/mathx/: mathx.go
golang/mask/: mask.go
golang/qrcodeecc/: qrcodeecc.go
golang/qrsegment/: bitbuffer.go  mode.go  qrsegment.go
golang/version/: version.go
java/: .gitignore  BitBuffer.java  QrCode.java  QrCodeGeneratorDemo.java  Readme.markdown  build.gradle  pom.xml  settings.gradle
java-fast/: Readme.markdown  pom.xml
java-fast/io/nayuki/fastqrcodegen/: BitBuffer.java  DataTooLongException.java  Memoizer.java  QrCode.java  QrCodeGeneratorDemo.java  QrSegment.java  QrSegmentAdvanced.java  QrTemplate.java  ReedSolomonGenerator.java  package-info.java
java-fast/src/main/java/io/nayuki/fastqrcodegen/: QrTemplate.java  package-info.java
java/advanced/src/io/nayuki/qrcodegen/: QrSegmentAdvanced.java
java/android/: build.gradle
java/android/src/io/nayuki/qrcodegen/: QrCodeAndroid.java
java/common/src/io/nayuki/qrcodegen/: BitBuffer.java
java/core/src/io/nayuki/qrcodegen/: BitBuffer.java  Objects.java  QrCode.java  QrSegment.java
java/demo/: build.gradle
java/demo/src/io/nayuki/qrcodegen/: QrCodeGeneratorDemo.java
java/gradle/wrapper/: gradle-wrapper.properties
java/io/nayuki/qrcodegen/: Base64.java  BitBuffer.java  DataTooLongException.java  Objects.java  QrCode.java  QrCodeGeneratorDemo.java  QrCodeGeneratorWorker.java  QrSegment.java  QrSegmentAdvanced.java  StandardCharsets.java
java/javase/: build.gradle
java/javase/src/io/nayuki/qrcodegen/: QrCodeJavaSE.java
java/src/main/java/: module-info.java
java/src/main/java/io/nayuki/qrcodegen/: AlphanumericMode.java  BitBuffer.java  Button.java  ByteMode.java  Command.java  DataTooLongException.java  Ecc.java  EciMode.java  KanjiMode.java  MakeAlphaNumericToSegment.java  MakeBytesToSegment.java  (+33 more)
java/svg/: build.gradle
java/svg/src/io/nayuki/qrcodegen/: QrCodeJavaSVG.java
javascript/: qrcodegen-demo.js  qrcodegen-js-demo.html  qrcodegen.js
python/: Example.py  Readme.markdown  qrcodegen-batch-test.py  qrcodegen-demo.py  qrcodegen-worker.py  qrcodegen.py  setup.py  test.py
rust/: Cargo.toml  Readme.markdown
rust-no-heap/: Cargo.toml  Readme.markdown
rust-no-heap/examples/: qrcodegen-demo.rs
rust-no-heap/src/: lib.rs
rust/examples/: qrcodegen-demo.rs  qrcodegen-worker.rs
rust/src/: lib.rs  qr_segment_advanced.rs  unicode_to_qr_kanji.json
scheme/: Readme.markdown  bits.scm  qrcodegen-demo.scm  qrcodegen.scm  qrcodegen.sld  reed-solomon.scm
src/io/nayuki/fastqrcodegen/: BitBuffer.java  Memoizer.java  QrCode.java  QrCodeGeneratorDemo.java  QrCodeGeneratorWorker.java  QrSegment.java  QrSegmentAdvanced.java  QrTemplate.java  ReedSolomonGenerator.java  package-info.java
swift/: .gitignore  Package.swift
swift/Sources/QRCodeGenerator/: BitBuffer.swift  QRCode.swift  QRCodeConstants.swift  QRCodeECC.swift  QRCodeGenerator.swift  QRCodeMiscellaneous.swift  QRSegment.swift
swift/Tests/: LinuxMain.swift
swift/Tests/QRCodeGeneratorTests/: QRCodeGeneratorTests.swift  XCTestManifests.swift
typescript/: build.sh  qrcodegen-demo.ts  qrcodegen-js-demo.html  qrcodegen-worker.ts  qrcodegen.ts
typescript-javascript/: .gitignore  Readme.markdown  build.sh  index.cjs  index.js  package-lock.json  package.json  qrcodegen-demo.ts  qrcodegen-input-demo.html  qrcodegen-input-demo.ts  qrcodegen-js-demo.html  qrcodegen-output-demo.html  qrcodegen-output-demo.ts  qrcodegen.js  qrcodegen.ts  tsconfig.base.json  tsconfig.es5.json  tsconfig.es6.json
typescript-javascript/utils/: index.ts
(+11 files in other folders)
